act pestaña de servicios - ro bonata

--- a/nosotros.html
+++ b/nosotros.html
@@ -157,8 +157,8 @@
           portfolioLink: "#",
           figmaLink:
             "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
-          career: "LIc en sistemas",
-          year: "2° año",
+          career: "Licenciatura en Gestión de Tecnología de la Información",
+          year: "1° año",
         },
       ];
 
