--- a/servicios.html
+++ b/servicios.html
@@ -65,14 +65,41 @@
     <main class="container my-5 flex-grow-1">
       <section id="servicios" class="section">
         <div>
-          <h1 class="section-title">Nuestros Servicios</h1>
-          <p>
-            Esta página está en desarrollo. Pronto encontrarás información sobre
-            nuestros servicios profesionales.
-          </p>
+          <div class="tituloservicios"> <!--   titulo servicios -->
+            <h1 class="section-title">Servicios</h1>
+          </div>
+          <div class="presentacionservicios"> <!--   texto de presentación -->
+            <p>Bienvenido a Servicios Profesionales, tu socio estratégico en soluciones tecnológicas. Ofrecemos un portafolio de servicios diseñado para impulsar el rendimiento y la eficiencia de tu empresa, alineado con las mejores prácticas y tendencias del sector. Nuestro compromiso es acompañarte en cada paso, desde la consultoría hasta el soporte continuo, asegurando que tu infraestructura tecnológica esté siempre a la altura de los desafíos de un entorno en constante evolución.</p>
+            <p>Transformamos tu negocio con:</p>
+        </div>
+        <div class="disposervicios"> <!-- servicios -->
+          <div class="fondoporservicio">
+            <img src="img/consultoria.png" alt="" >
+            <h5 class="nombreserv">Consultoría de gestión de servicios:</h5>
+            <p>Ofrecemos soluciones IT a medida para tu negocio, basadas en las mejores prácticas internacionales como ITIL y Agile. Implementamos herramientas ITSM y CMDB para gestionar incidentes, problemas y activos. Evaluamos costos y optimizamos la transformación.</p>
+          </div>
+          <div class="fondoporservicio">
+            <img src="img/soporte-removebg-preview.png" alt="" class="margentop">
+            <h5 class="nombreserv">Soporte y mantenimiento de aplicaciones:</h5>
+            <p>Ofrecemos soporte y mantenimiento integral para aplicaciones de alto rendimiento. Nuestro enfoque proactivo previene problemas y optimiza continuamente el rendimiento. Gestionamos incidencias, eliminamos deudas técnicas y ajustamos bases de datos para garantizar una experiencia de usuario óptima. </p>
+          </div>
+          <div class="fondoporservicio">
+            <img src="img/desarrollo.png" alt="" class="margentop">
+            <h5 class="nombreserv">Desarrollo de software a medida:</h5>
+            <p>Tu aliado tecnológico para el éxito. Nuestro equipo de expertos te acompaña en todo el proceso de creación de software, desde la conceptualización y el diseño hasta el desarrollo, las pruebas y el despliegue. Utilizamos metodologías ágiles para garantizar la flexibilidad y la adaptación a tus necesidades cambiantes.</p>
+          </div>
+        </div>
+        <div class=dispofrases> <!-- frases que destaquen los valores de la empresa -->
+          <div class="fondofrases">
+            <p>"Tu transformación digital, nuestra prioridad. Desarrollamos soluciones tecnológicas a medida que se adaptan a tu negocio y te permiten alcanzar tus objetivos.</p>
+          </div>
+          <div class="fondofrases">
+            <p>"Pasión por la tecnología, compromiso con tus resultados. Ofrecemos soluciones tecnológicas a medida que superan tus expectativas."</p>
+          </div>
         </div>
       </section>
     </main>
+
 
     <footer class="bg-light text-dark py-4 mt-auto">
       <div class="container">
