--- a/contacto.html
+++ b/contacto.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Servicios - Servicios Profesionales</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="d-flex flex-column">
@@ -19,24 +14,8 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="index.html">
-            <img
-              src="./img/logosp.jpeg"
-              alt="Logo"
-              width="30"
-              height="30"
-              class="d-inline-block align-top rounded-circle"
-            />
-            Servicios Profesionales
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            <img src="./img/logosp.jpeg" alt="Logo" width="30" height="30" class="d-inline-block align-top rounded-circle" /> Servicios Profesionales </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -61,24 +40,75 @@
         </nav>
       </div>
     </header>
-
     <main class="container my-5 flex-grow-1">
       <section id="servicios" class="section">
         <div>
-          <h1 class="section-title">Contacto</h1>
-          <p>
-            Esta página está en desarrollo. Pronto encontrarás información sobre
-            nuestros contactos.
-          </p>
+          <section id="info-adicional" class="my-4">
+            <h2 class="text-center mb-4">Contacto</h2>
+            <div class="presentacionservicios">
+              <p> Contactese con nosotros llenando el formulario y responderemos sus comentarios lo antes posible. </p>
+              <p>Tambien puede contactarse con nosotros y ver muestras de nuestros trabajos en nuestras redes sociales: <a href="https://x.com/" target="_blank">
+                  <i class="bi bi-twitter text-dark"></i>
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                  <i class="bi bi-linkedin text-dark"></i>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                  <i class="bi bi-instagram text-dark"></i>
+                </a>
+              </p>
+            </div>
+          </section>
+          <div class="container my-5">
+            <h2 class="text-center mb-4">Consultas</h2>
+            <div class="formulario-container mx-auto" style="max-width: 600px;">
+              <form>
+                <div class="row mb-3 align-items-center">
+                  <label for="nombre" class="col-sm-4 col-form-label form-label">Nombre y Apellido</label>
+                  <div class="col-sm-8">
+                    <input type="text" class="form-control" id="nombre" required>
+                  </div>
+                </div>
+                <div class="row mb-3 align-items-center">
+                  <label for="correo" class="col-sm-4 col-form-label form-label">Correo Electrónico</label>
+                  <div class="col-sm-8">
+                    <input type="email" class="form-control" id="correo" required>
+                  </div>
+                </div>
+                <div class="row mb-3 align-items-center">
+                  <label for="telefono" class="col-sm-4 col-form-label form-label">Teléfono</label>
+                  <div class="col-sm-8">
+                    <input type="tel" class="form-control" id="telefono" required>
+                  </div>
+                </div>
+                <div class="row mb-3 align-items-center">
+                  <label for="consulta" class="col-sm-4 col-form-label form-label">Consulta</label>
+                  <div class="col-sm-8">
+                    <textarea class="form-control" id="consulta" rows="4" required></textarea>
+                  </div>
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn btn-primary">Enviar Consulta</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <h2 class="text-center mb-4">Nuestras oficinas</h2>
+          <section id="ubicacion" class="row my-5 align-items-center">
+            <div class="col-md-6">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13133.961219384153!2d-58.3819186!3d-34.617048!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaba6ac89b35%3A0x1a2dc24cbca665a7!2sUADE!5e0!3m2!1sen!2sar!4v1727470398440!5m2!1sen!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col-md-6">
+              <p> Nos encontramos en Avenida de 9 de Julio, a la salida de la estacion de subte de la linea C y D. </p>
+              <p> Nuestro horario de atención es de 10 a 17 horas </p>
+            </div>
+          </section>
         </div>
       </section>
     </main>
-
     <footer class="bg-light text-dark py-4 mt-auto">
       <div class="container">
-        <div
-          class="d-flex flex-column flex-md-row justify-content-between align-items-center"
-        >
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
           <div class="flex-grow-1">
             <div class="row text-center">
               <div class="col-md-4">
@@ -87,35 +117,28 @@
                 </p>
               </div>
               <div class="col-md-4">
-                <p class="mb-1"><strong>Curso:</strong> Virtual</p>
+                <p class="mb-1">
+                  <strong>Curso:</strong> Virtual
+                </p>
               </div>
               <div class="col-md-4">
-                <p class="mb-1"><strong>Grupo:</strong> 07</p>
+                <p class="mb-1">
+                  <strong>Grupo:</strong> 07
+                </p>
               </div>
             </div>
             <div class="row text-center mt-3">
               <div class="col-md-12">
-                <p>
-                  © 2024 Todos los Derechos reservados - Sitio desarrollado para
-                  uso educativo.
-                </p>
+                <p> © 2024 Todos los Derechos reservados - Sitio desarrollado para uso educativo. </p>
               </div>
             </div>
           </div>
-          <div
-            class="d-flex justify-content-center align-items-center mt-3 mt-md-0"
-            style="width: 150px"
-          >
-            <img
-              src="./img/LogoUADE.png"
-              alt="Logo UADE"
-              style="max-width: 100px"
-            />
+          <div class="d-flex justify-content-center align-items-center mt-3 mt-md-0" style="width: 150px">
+            <img src="./img/LogoUADE.png" alt="Logo UADE" style="max-width: 100px" />
           </div>
         </div>
       </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
