Update Soporte.html , img and style

--- a/soporte.html
+++ b/soporte.html
@@ -64,13 +64,46 @@
 
     <main class="container my-5 flex-grow-1">
       <section id="soporte" class="section">
-        <div>
-          <h1 class="section-title">Soporte Técnico</h1>
-          <p>
-            Esta página está en desarrollo. Pronto encontrarás información sobre
-            nuestros servicios de soporte y asistencia técnica.
-          </p>
+     <div>
+          <div class="Titulossoporte">
+          <h1 class="section-title">Soporte</h1>
         </div>
+         <div class="Descripcionsoporte">
+          <p>
+            En nuestra página de consultoría tecnológica, ofrecemos un soporte integral para optimizar procesos y adoptar soluciones innovadoras. Nuestro equipo analiza las necesidades específicas de cada cliente y brinda asesoría estratégica en la planificación y ejecución de proyectos. Nos especializamos en la implementación de software y proporcionamos capacitación para que tu equipo aproveche al máximo las nuevas tecnologías. Además, ofrecemos soporte técnico continuo y desarrollamos estrategias de ciberseguridad para proteger tus activos digitales.Estamos aquí para acompañarte en cada etapa de tu transformación digital.
+          </p>
+          
+        </div>
+        <h1 class="TitulossoporteDiv"> Mantenimiento de software </h1>
+        <div class="Ordensoporte">
+      
+          <div class="imagen-container">
+            <img src="img/software.png" alt="" >
+          </div>
+
+          <div class="imagen-container">
+            <img src="img/cyberseguridad.png" alt=""  >
+          </div>
+
+          <div class="imagen-container">
+           <img src="img/call-center.png" alt="" >
+           </div>
+        </div>
+
+        <div class="Containersoporte">
+          <img src="img/software.png" alt="IT" class="imagen">
+          <p class="texto">En nuestra consultora de software, ofrecemos soporte técnico especializado para nuestros programas, asegurando que nuestros clientes puedan utilizarlos de manera efectiva. Nuestro equipo está disponible para resolver dudas, diagnosticar problemas y proporcionar soluciones rápidas y efectivas. Nos comprometemos a garantizar el correcto funcionamiento de nuestras herramientas, optimizando la experiencia del usuario y maximizando el rendimiento de sus operaciones.</p>
+      </div>
+      <div class="Containersoporte">
+        <img src="img/cyberseguridad.png" alt="secure" class="imagen">
+        <p class="texto">En nuestra consultora de software, ofrecemos servicios de ciberseguridad diseñados para proteger tus datos y sistemas. Nuestro equipo de expertos implementa soluciones avanzadas para prevenir, detectar y responder a amenazas cibernéticas. Nos enfocamos en garantizar la integridad, confidencialidad y disponibilidad de tu información, brindando tranquilidad y confianza en un entorno digital seguro.</p>
+    </div>
+    <div class="Containersoporte">
+      <img src="img/call-center.png" alt="callcenter" class="imagen">
+      <p class="texto">El soporte técnico desde nuestro call center ofrece asistencia especializada las 24hs para resolver problemas relacionados con nuestros software. Nuestro equipo de expertos está disponible para responder consultas, diagnosticar errores y proporcionar soluciones efectivas, garantizando que nuestros clientes aprovechen al máximo nuestras herramientas. Su satisfacción y el correcto funcionamiento de nuestros productos son nuestra prioridad.</p>
+  </div>
+
+    </div>
       </section>
     </main>
 
