--- a/nosotros.html
+++ b/nosotros.html
@@ -121,7 +121,7 @@
           portfolioLink: "https://ianlio-git.github.io/Portfolio-UADE/",
           figmaLink:
             "https://www.figma.com/design/CnpTpsKwSZuE2ClMp8SzSs/Portfolio?node-id=6-74&m=dev",
-          career: "Licenciatura de Sistemas",
+          career: "Licenciatura en Sistemas",
           year: "2° año",
         },
         {
@@ -130,7 +130,7 @@
           portfolioLink: "https://alvalenteuade.github.io/Portfolio/",
           figmaLink:
             "https://www.figma.com/design/Xw4lvQD2rdk3UK5BDvTEIw/Portfolio?node-id=0-1&m=dev&t=svH8nAYDW6rpG8EW-1",
-          career: "Licenciatura de Sistemas",
+          career: "Licenciatura en Sistemas",
           year: "2° año",
         },
         {
@@ -148,7 +148,7 @@
           portfolioLink: "https://emirsein1.github.io/Portfolio/",
           figmaLink:
             "https://www.figma.com/design/Iy98A9xMElwfPgSdw91lXK/Portfolio?node-id=1-6&t=L1FCbEw4syH8N69L-1",
-          career: "Licenciatura de Sistemas",
+          career: "Licenciatura en Sistemas",
           year: "1° año",
         },
         {
@@ -158,7 +158,7 @@
             "https://rosariobonata.github.io/uva2-portfolio-personal/",
           figmaLink:
             "https://www.figma.com/design/Y72UIAFPVJOJVy9phrpHlN/PROTO1?node-id=0-1&t=RTToY5aDMiW0tuov-1 ",
-          career: "Licenciatura de Sistemas",
+          career: "Licenciatura en Sistemas",
           year: "1° año",
         },
       ];
