--- a/portfolio.html
+++ b/portfolio.html
@@ -95,8 +95,10 @@
               <div class="card-body d-flex flex-column" style="padding: 2.5rem">
                 <h5 class="card-title">Servicios Profesionales</h5>
                 <p class="card-text flex-grow-1">
-                  Sitio web que describe nuestra empresa.
-                </p>
+                  Sitio web que describe nuestra empresa.</p>
+                  <p>Nos especializamos en ofrecer soluciones personalizadas en consultoría de gestión de servicios, soporte y mantenimiento de aplicaciones, y desarrollo de software a medida.</p>
+                  <p>Nuestro enfoque se basa en las mejores prácticas internacionales, como ITIL y Agile, para brindar un servicio de alta calidad. Nos dedicamos a optimizar procesos y transformar la experiencia digital de nuestros clientes.</p>
+
                 <div>
                   <a href="index.html" class="btn btn-secondary btn-sm"
                     >Ver proyecto</a
@@ -112,15 +114,34 @@
                 style="height: 250px; overflow: hidden; padding: 20px"
               >
                 <img
-                  src="./img/underConstruction.png"
+                  src="./img/instituto.png"
                   class="img-fluid"
-                  alt="Sitio en construcción"
+                  alt="Sitio del Instituto Eureka"
                   style="object-fit: contain"
                 />
               </div>
               <div class="card-body d-flex flex-column" style="padding: 2.5rem">
-                <h5 class="card-title">Servicios Profesionales</h5>
-                <p class="card-text flex-grow-1">Sitio web en construcción.</p>
+                <h5 class="card-title">Instituto Eureka</h5>
+                <p class="card-text flex-grow-1">El Instituto "Eureka" se especializa en ofrecer clases personalizadas para estudiantes universitarios que buscan apoyo académico. Su enfoque está en brindar métodos de estudio flexibles y accesibles.</p>
+                <p class="card-text flex-grow-1">El sitio web tiene como objetivo presentar los servicios del instituto, permitir la reserva de clases de manera intuitiva (dejando elegir al profesor, el horario y curso), proporcionar acceso a una biblioteca digital de recursos académicos, ofrecer un foro para la interacción entre estudiantes, como así también, una pestaña de preguntas frecuentes para que los usuarios despejen todas sus dudas. Por ultimo, se detallarán los métodos de pago y contacto con la institución.</p>
+              
+                <div class="botones">
+                  <div>
+                    <a href="https://ianlio-git.github.io/tp2_web/" target="_blank" class="btn btn-secondary btn-sm"
+                      >Ver proyecto</a
+                    >
+                  </div>
+                  <div>
+                    <a href="https://ianlio-git.github.io/avances_tp2/" target="_blank" class="btn btn-secondary btn-sm"
+                      >Ver avances</a
+                    >
+                  </div>
+                  <div>
+                    <a href="#" target="_blank" class="btn btn-secondary btn-sm"
+                      >Ver video explicativo</a
+                    >
+                  </div>
+                </div>
               </div>
             </div>
           </div>
