--- a/uva2 act obligatoria/portfolio.html
+++ b/uva2 act obligatoria/portfolio.html
@@ -63,13 +63,123 @@
     </header>
 
     <main class="container my-5 flex-grow-1">
-      <section id="portafolio" class="section">
-        <div>
-          <h1 class="section-title">Nuestro Portfolio</h1>
-          <p>
-            Esta página está en desarrollo. Pronto encontrarás ejemplos de
-            nuestros proyectos y trabajos realizados.
+      <section id="portafolio" class="section portfolio-section">
+        <h1 class="text-center mb-4">Portafolio</h1>
+
+        <div
+          class="bg-light p-4 rounded mb-5"
+          style="max-width: 90%; margin: 0 auto"
+        >
+          <p class="text-center mb-0">
+            En esta sección encontrarás nuestros proyectos, mostrando nuestras
+            capacidades en desarrollo de software. Actualmente, presentamos
+            nuestro proyecto principal: esta plataforma de servicios de
+            software.
           </p>
+        </div>
+
+        <div class="row row-cols-1 row-cols-lg-2 g-4 mb-5">
+          <div class="col">
+            <div class="card h-100 border-0 bg-light">
+              <div
+                class="card-img-top d-flex align-items-center justify-content-center"
+                style="height: 250px; overflow: hidden; padding: 20px"
+              >
+                <img
+                  src="./img/home.png"
+                  class="img-fluid"
+                  alt="Servicios Profesionales"
+                  style="object-fit: cover"
+                />
+              </div>
+              <div class="card-body d-flex flex-column" style="padding: 2.5rem">
+                <h5 class="card-title">Servicios Profesionales</h5>
+                <p class="card-text flex-grow-1">
+                  Sitio web que describe nuestra empresa.</p>
+                  <p>Nos especializamos en ofrecer soluciones personalizadas en consultoría de gestión de servicios, soporte y mantenimiento de aplicaciones, y desarrollo de software a medida.</p>
+                  <p>Nuestro enfoque se basa en las mejores prácticas internacionales, como ITIL y Agile, para brindar un servicio de alta calidad. Nos dedicamos a optimizar procesos y transformar la experiencia digital de nuestros clientes.</p>
+
+                <div>
+                  <a href="index.html" class="btn btn-secondary btn-sm"
+                    >Ver proyecto</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-0 bg-light">
+              <div
+                class="card-img-top d-flex align-items-center justify-content-center"
+                style="height: 250px; overflow: hidden; padding: 20px"
+              >
+                <img
+                  src="./img/instituto.png"
+                  class="img-fluid"
+                  alt="Sitio del Instituto Eureka"
+                  style="object-fit: contain"
+                />
+              </div>
+              <div class="card-body d-flex flex-column" style="padding: 2.5rem">
+                <h5 class="card-title">Instituto Eureka</h5>
+                <p class="card-text flex-grow-1">El Instituto "Eureka" se especializa en ofrecer clases personalizadas para estudiantes universitarios que buscan apoyo académico. Su enfoque está en brindar métodos de estudio flexibles y accesibles.</p>
+                <p class="card-text flex-grow-1">El sitio web tiene como objetivo presentar los servicios del instituto, permitir la reserva de clases de manera intuitiva (dejando elegir al profesor, el horario y curso), proporcionar acceso a una biblioteca digital de recursos académicos, ofrecer un foro para la interacción entre estudiantes, como así también, una pestaña de preguntas frecuentes para que los usuarios despejen todas sus dudas. Por ultimo, se detallarán los métodos de pago y contacto con la institución.</p>
+              
+                <div class="botones">
+                  <div>
+                    <a href="https://insteureka.netlify.app/" target="_blank" class="btn btn-secondary btn-sm"
+                      >Ver proyecto</a
+                    >
+                  </div>
+                  <div>
+                    <a href="https://ianlio-git.github.io/avances_tp2/" target="_blank" class="btn btn-secondary btn-sm"
+                      >Ver avances</a
+                    >
+                  </div>
+                  <div>
+                    <a href="https://youtu.be/k8zvlLZogdA" target="_blank" class="btn btn-secondary btn-sm"
+                      >Ver video explicativo</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="bg-light p-4 rounded tecnologias-container"
+          style="max-width: 90%; margin: 0 auto"
+        >
+          <h2 class="text-center mb-4">Tecnologías</h2>
+          <div
+            class="row row-cols-2 row-cols-md-4 g-4 g-md-5 justify-content-center align-items-center"
+          >
+            <div class="col text-center">
+              <img
+                src="./img/html5.png"
+                alt="HTML5"
+                class="img-fluid tech-icon"
+              />
+            </div>
+            <div class="col text-center">
+              <img src="./img/css.png" alt="CSS3" class="img-fluid tech-icon" />
+            </div>
+            <div class="col text-center">
+              <img
+                src="./img/js.png"
+                alt="JavaScript"
+                class="img-fluid tech-icon"
+              />
+            </div>
+            <div class="col text-center">
+              <img
+                src="./img/bootstrap.png"
+                alt="Bootstrap"
+                class="img-fluid tech-icon"
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
