--- a/uva2 act obligatoria/portfolio.html
+++ b/uva2 act obligatoria/portfolio.html
@@ -137,7 +137,7 @@
                     >
                   </div>
                   <div>
-                    <a href="https://youtu.be/k8zvlLZogdA" target="_blank" class="btn btn-secondary btn-sm"
+                    <a href="https://youtu.be/k8zvlLZogdA?si=17JMIp0PpsAF9PdJ" target="_blank" class="btn btn-secondary btn-sm"
                       >Ver video explicativo</a
                     >
                   </div>
